SIS2-636: Fix media library overlapping dropdown menu

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/base.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/base.css
@@ -161,6 +161,10 @@ table {
   flex-wrap: wrap;
 }
 
+.views-form {
+  z-index: 10;
+}
+
 .js-media-library-views-form {
   img {
     width: 100%;
